nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__install_deps__graphs.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupNodeTool(20.0.0)" ]
    2 [ label="InstallNodeDeps(20.0.0)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
}

