nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__install_deps__installs_in_project_when_not_in_depman_workspace.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupNodeTool(20.0.0)" ]
    2 [ label="InstallNodeDeps(20.0.0)" ]
    3 [ label="InstallNodeDepsInProject(20.0.0, out)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 1 [ ]
}

